--- a/src/main/resources/static/fragments/place.htm
+++ b/src/main/resources/static/fragments/place.htm
@@ -1,3 +1,6 @@
 <div class="container">
     <h1>{{place.name}}</h1>
+
+    <h2>Comments:</h2>
+    <p ng-repeat="comment in comments">{{comment.text}}</p>
 </div>
