--- a/src/main/resources/static/fragments/navbar.htm
+++ b/src/main/resources/static/fragments/navbar.htm
@@ -2,12 +2,15 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
+
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" ng-show="loggedIn" href="#">{{user.username}}</a>
+            <a class="navbar-brand" ng-hide="loggedIn" href="/login.html">Login</a>
             <a class="navbar-brand" href="/index.html">Home</a>
         </div>
 
