--- a/src/main/resources/static/fragments/place.htm
+++ b/src/main/resources/static/fragments/place.htm
@@ -2,4 +2,5 @@
     <h1>{{place.name}}</h1>
     <h2>Comments:</h2>
     <p ng-repeat="comment in comments">{{comment.text}}</p>
+    <input type='text' ng-model='ct'><button ng-click="addComment(ct)">add comment</button>
 </div>
