--- a/src/main/resources/static/fragments/place.htm
+++ b/src/main/resources/static/fragments/place.htm
@@ -1,6 +1,15 @@
 <div class="container">
     <h1>{{place.name}}</h1>
+    <h2>place rating: {{rating}}</h2>
+    <div>
+        <button ng-click="sendRating(1)">1</button>
+        <button ng-click="sendRating(2)">2</button>
+        <button ng-click="sendRating(3)">3</button>
+        <button ng-click="sendRating(4)">4</button>
+        <button ng-click="sendRating(5)">5</button>
+    </div>
     <h2>Comments:</h2>
     <p ng-repeat="comment in comments">{{comment.text}}</p>
     <input type='text' ng-model='ct'><button ng-click="addComment(ct)">add comment</button>
+
 </div>
