--- a/src/main/resources/static/fragments/navbar.htm
+++ b/src/main/resources/static/fragments/navbar.htm
@@ -24,9 +24,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="/approve.html">Approve place</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="/saveplace.html">Add place</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">One more separated link</a></li>
                     </ul>
