--- a/src/main/resources/static/fragments/footer.htm
+++ b/src/main/resources/static/fragments/footer.htm
@@ -1,15 +1,10 @@
-<!------ Include the above in your HEAD tag ---------->
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+        <p class="navbar-text pull-left">© 2014 - Site Built By Mr. M.
+            <a href="http://tinyurl.com/tbvalid" target="_blank" >HTML 5 Validation</a>
+        </p>
 
-<div class="container">
-    <div class="row">
-        <hr>
-        <div class="col-lg-12">
-            <div class="col-md-8">
-                <a href="#">Terms of Service</a> | <a href="#">Privacy</a>
-            </div>
-            <div class="col-md-4">
-                <p class="muted pull-right">© 2013 Company Name. All rights reserved</p>
-            </div>
-        </div>
+        <a href="http://youtu.be/zJahlKPCL9g" class="navbar-btn btn-danger btn pull-right">
+            <span class="glyphicon glyphicon-star"></span>  Subscribe on YouTube</a>
     </div>
 </div>
