--- a/src/main/resources/static/fragments/footer.htm
+++ b/src/main/resources/static/fragments/footer.htm
@@ -1,9 +1,29 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
         <p class="navbar-text pull-left">© 2014 - Site Built By Mr. M.
-        <a href="http://tinyurl.com/tbvalid" target="_blank" >HTML 5 Validation</a>
-    </p>
+            <a href="http://tinyurl.com/tbvalid" target="_blank" >HTML 5 Validation</a>
+        </p>
+		
+		<p class="navbar-text pull-left">
+            <a href="https://wheretogotonight.herokuapp.com/index.html" target="_blank" >Home</a>
+        </p>
+		
+		<p class="navbar-text pull-left">
+            <a href="https://wheretogotonight.herokuapp.com/cookies.html" target="_blank" >Cookies</a>
+        </p>
+		
+		<p class="navbar-text pull-left">
+            <a href="https://wheretogotonight.herokuapp.com/privacy.html" target="_blank" >Privacy</a>
+        </p>
+		
+		<p class="navbar-text pull-left">
+            <a href="https://wheretogotonight.herokuapp.com/documentation.html" target="_blank" >Documentation</a>
+        </p>
 
+		
+		
+		
+		
         <a href="http://youtu.be/zJahlKPCL9g" class="navbar-btn btn-danger btn pull-right">
             <span class="glyphicon glyphicon-star"></span>  Subscribe on YouTube</a>
     </div>
