--- a/src/main/resources/static/fragments/places.htm
+++ b/src/main/resources/static/fragments/places.htm
@@ -8,7 +8,7 @@
                 <div class="col-md-8">
                     <h1 class="cta-title">{{place.name}}</h1>
                     <div class="cta-desc">
-                        <span>createdBy: </span><a ng-href="user.html?id={{place.userCreated.id}}">{{place.userCreated.username}}</a>
+                        <span>createdBy: </span><a ng-href="usersa.html?id={{place.userCreated.id}}">{{place.userCreated.username}}</a>
                         <p>This is a {{place.type}}</p>
                         <p>{{place.city}}</p>
                     </div>
