--- a/src/main/resources/static/fragments/newpole.htm
+++ b/src/main/resources/static/fragments/newpole.htm
@@ -69,7 +69,7 @@
         <tbody>
         <tr ng-repeat="user in poll.users">
             <td class="col-md-2" scope="row">{{user.id}}</td>
-            <td class="col-md-8"><a ng-href="/user.html?id={{user.id}}">{{user.username}}</a></td>
+            <td class="col-md-8"><a ng-href="/usersa.html?id={{user.id}}">{{user.username}}</a></td>
             <td class="col-md-2"><a><span class="glyphicon glyphicon-trash" ng-click="removeUser(user)"></span></a></td>
         </tr>
 
